# snap-cinder-volume

./: .gitignore  README.md  SECURITY.md  pyproject.toml  requirements.txt  tox.ini
.github/workflows/: build-snap.yaml  test-python.yaml  tics.yml
cinder_volume/: cinder_volume.py  configuration.py  context.py  error.py  log.py  services.py  template.py
cinder_volume/scripts/: snap_helpers.py
cinder_volume/templates/: backend.conf.j2  backend.pem.j2  ceph.client.keyring.j2  ceph.conf.j2  cinder.conf.j2  dellsc.conf.j2  hitachi.conf.j2  hitachi_backend.pem.j2  pure.conf.j2  receive-ca-bundle.pem.j2  rootwrap.conf.j2
snap/: snapcraft.yaml
tests/: conftest.py  test_backend_templating.py  test_cinder_volume_runtime.py  test_configuration.py  test_context.py  test_error.py  test_log.py  test_template.py
