[project]
name = "cinder-volume"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["cinder_volume", "cinder_volume.scripts"]

[tool.setuptools.package-data]
cinder_volume = ["templates/*.j2"]

[project.scripts]
cinder_volume = "cinder_volume.services:cinder_volume"
cinder-snap-helpers = "cinder_volume.scripts.snap_helpers:script"

[project.entry-points."snaphelpers.hooks"]
install = "cinder_volume.cinder_volume:GenericCinderVolume.install_hook"
configure = "cinder_volume.cinder_volume:GenericCinderVolume.configure_hook"
